--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-13, windows-latest]  # let's build on mac 13 while the issue is being resolved
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
 
     steps:
       - name: Set git to use LF
@@ -30,7 +30,6 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install torch!=2.3.0
           pip install -r requirements-dev.txt
       - name: pylint
         run: |
@@ -39,7 +38,6 @@ jobs:
         run: |
           mypy torch_kf
       - name: black
-        if: ${{ matrix.python-version != 3.7 }}  # Recent black do not support python 3.7
         run: |
           black --check .
       # TODO
