--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,24 +3,18 @@ name: Deploy
 on:
   push:
     tags:
-      - "v*.*.*"
+      - "v*"
 
 jobs:
   check_version:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.12'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install setuptools
+      - uses: actions/checkout@v6
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7
       - name: Check deployed version
         run: |
-          [ "$GITHUB_REF_NAME" == "v$(python setup.py --version)" ]
+          [ "$GITHUB_REF_NAME" == "v$(uv version --short)" ]
   tests:
     needs: check_version
     uses: ./.github/workflows/tests.yml
@@ -28,18 +22,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: tests
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.12'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install build
+      - uses: actions/checkout@v6
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7
       - name: Build package
-        run: python -m build
-      - name: Publish package
+        run: uv build
+      - name: Publish package  # Could use uv publish instead?
         uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
         with:
           user: __token__
